304913-41584931  The logger was not working because @Assisted had a value parameter defined in the annotation. Well, now that is fixed, however the untidy code is commented just in case we did something else that fixed the problem. ~Port Hobbits To Old Persistence Strategy and Fork The Original For NoSQL Testing